# embedder

./: .gitignore  .gn  BUILD.gn  DEPS  NOTICES  README.md  analysis_options.yaml
.gemini/: config.yaml  styleguide.md
.github/workflows/: analyze.yml  build-docker.yml  build.yml  check-symbols.yml  svace_builder.sh
flutter/: BUILD.gn
flutter/fml/: BUILD.gn  mapping.cc  mapping.h  unique_fd.cc
flutter/fml/platform/posix/: file_posix.cc  mapping_posix.cc
flutter/shell/platform/common/: BUILD.gn  accessibility_bridge.cc
flutter/shell/platform/common/client_wrapper/: BUILD.gn  core_wrapper_files.gni  publish.gni
flutter/shell/platform/common/client_wrapper/include/flutter/: basic_message_channel.h  event_channel.h
flutter/shell/platform/embedder/: BUILD.gn  embedder.h
flutter/shell/platform/tizen/: BUILD.gn  accessibility_bridge_delegate_tizen.cc  accessibility_bridge_delegate_tizen.h  accessibility_bridge_tizen.cc  accessibility_bridge_tizen.h  accessibility_settings.cc  accessibility_settings.h  external_texture.h  external_texture_pixel_egl.cc  external_texture_pixel_egl.h  external_texture_pixel_egl_impeller.cc  external_texture_pixel_egl_impeller.h  external_texture_pixel_evas_gl.cc  external_texture_pixel_evas_gl.h  external_texture_pixel_vulkan.cc  external_texture_pixel_vulkan.h  external_texture_surface_egl.cc  external_texture_surface_egl.h  external_texture_surface_egl_impeller.cc  external_texture_surface_egl_impeller.h  external_texture_surface_evas_gl.cc  external_texture_surface_evas_gl.h  external_texture_surface_vulkan.cc  external_texture_surface_vulkan.h  external_texture_surface_vulkan_buffer.cc  external_texture_surface_vulkan_buffer.h  external_texture_surface_vulkan_buffer_dma.cc  external_texture_surface_vulkan_buffer_dma.h  flutter_platform_node_delegate_tizen.cc  flutter_platform_node_delegate_tizen.h  flutter_project_bundle.cc  flutter_project_bundle.h  flutter_project_bundle_unittests.cc  flutter_tizen.cc  flutter_tizen_display_monitor.cc  flutter_tizen_display_monitor.h  flutter_tizen_elementary.cc  flutter_tizen_engine.cc  flutter_tizen_engine.h  flutter_tizen_engine_group.cc  (+56 more)
flutter/shell/platform/tizen/channels/: accessibility_channel.cc  accessibility_channel.h  app_control.cc  app_control.h  app_control_channel.cc  app_control_channel.h  cursor_channel.cc  cursor_channel.h  encodable_value_holder.h  feedback_manager.cc  feedback_manager.h  input_device_channel.cc  input_device_channel.h  input_panel_channel.cc  input_panel_channel.h  key_event_channel.cc  key_event_channel.h  key_mapping.cc  key_mapping.h  keyboard_channel.cc  keyboard_channel.h  lifecycle_channel.cc  lifecycle_channel.h  lifecycle_channel_unittests.cc  mouse_cursor_channel.cc  mouse_cursor_channel.h  navigation_channel.cc  navigation_channel.h  platform_channel.cc  platform_channel.h  platform_view_channel.cc  platform_view_channel.h  settings_channel.cc  settings_channel.h  settings_channel_unittests.cc  string_codec.h  text_input_channel.cc  text_input_channel.h  tizen_shell.cc  tizen_shell.h  (+2 more)
flutter/shell/platform/tizen/public/: flutter_platform_view.h  flutter_tizen.h
flutter/shell/platform/tizen/testing/: engine_modifier.h  test_binary_messenger.h
tools/: arm.patch  check_symbols.py  download_engine.py  generate_sysroot.py  gn
