# Copyright 2022 Samsung Electronics Co., Ltd. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

group("tizen") {
  deps = [ "//flutter/shell/platform/tizen:flutter_tizen" ]
}

group("unittests") {
  testonly = true

  deps = [ "//flutter/shell/platform/tizen:flutter_tizen_unittests" ]
}
