# Copyright 2022 Samsung Electronics Co., Ltd. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//flutter/shell/platform/common/client_wrapper/publish.gni")

_public_headers = [
  "public/flutter_platform_view.h",
  "public/flutter_tizen.h",
]

config("flutter_tizen_config") {
  include_dirs = [
    "${sysroot_path}/usr/include/appfw",
    "${sysroot_path}/usr/include/base",
    "${sysroot_path}/usr/include/dali",
    "${sysroot_path}/usr/include/dali-adaptor",
    "${sysroot_path}/usr/include/dali-toolkit",
    "${sysroot_path}/usr/include/dlog",
    "${sysroot_path}/usr/include/feedback",
    "${sysroot_path}/usr/include/system",
    "${sysroot_path}/usr/include/tzsh",
    "${sysroot_path}/usr/include/vconf",
    "${sysroot_path}/usr/include/wayland-extension",
    "${sysroot_path}/usr/include/glib-2.0",
    "${sysroot_path}/usr/lib/glib-2.0/include",
  ]

  # tcore-specific includes
  if (use_tcore) {
    include_dirs += [
      "${sysroot_path}/usr/include/tizen-core",
      "${sysroot_path}/usr/include/tizen-core-imf",
      "${sysroot_path}/usr/include/tizen-core-wl",
    ]
  } else {
    # ecore-specific includes
    include_dirs += [
      "${sysroot_path}/usr/include/ecore-1",
      "${sysroot_path}/usr/include/ecore-imf-1",
      "${sysroot_path}/usr/include/ecore-input-1",
      "${sysroot_path}/usr/include/ecore-wayland-1",
      "${sysroot_path}/usr/include/ecore-wl2-1",
      "${sysroot_path}/usr/include/efl-1",
      "${sysroot_path}/usr/include/eina-1",
      "${sysroot_path}/usr/include/eina-1/eina",
      "${sysroot_path}/usr/include/eo-1",
    ]
  }

  cflags_cc = [
    "-Wno-newline-eof",
    "-Wno-macro-redefined",
  ]
}

config("relative_client_wrapper_headers") {
  include_dirs = [ "//flutter/shell/platform/common/client_wrapper/include" ]
}

source_set("dart_api_dl") {
  sources = [
    "//third_party/dart/runtime/include/dart_api_dl.c",
    "//third_party/dart/runtime/include/dart_api_dl.h",
  ]
}

template("embedder") {
  forward_variables_from(invoker,
                         [
                           "target_type",
                           "defines",
                         ])

  target(target_type, target_name) {
    public = _public_headers

    sources = [
      "accessibility_bridge_tizen.cc",
      "accessibility_settings.cc",
      "channels/accessibility_channel.cc",
      "channels/app_control.cc",
      "channels/app_control_channel.cc",
      "channels/feedback_manager.cc",
      "channels/input_device_channel.cc",
      "channels/input_panel_channel.cc",
      "channels/key_mapping.cc",
      "channels/keyboard_channel.cc",
      "channels/lifecycle_channel.cc",
      "channels/mouse_cursor_channel.cc",
      "channels/navigation_channel.cc",
      "channels/platform_channel.cc",
      "channels/platform_view_channel.cc",
      "channels/settings_channel.cc",
      "channels/text_input_channel.cc",
      "channels/window_channel.cc",
      "external_texture_pixel_egl.cc",
      "external_texture_surface_egl.cc",
      "flutter_platform_node_delegate_tizen.cc",
      "flutter_project_bundle.cc",
      "flutter_tizen.cc",
      "flutter_tizen_display_monitor.cc",
      "flutter_tizen_engine.cc",
      "flutter_tizen_texture_registrar.cc",
      "flutter_tizen_view.cc",
      "logger.cc",
      "system_utils.cc",
      "tizen_event_loop.cc",
      "tizen_renderer.cc",
      "tizen_renderer_egl.cc",
      "tizen_renderer_gl.cc",
      "tizen_vsync_waiter.cc",
    ]

    # Select window implementation based on use_tcore
    if (use_tcore) {
      sources += [
        "tizen_window_tcore_wl.cc",
        "tizen_input_method_context_tcore.cc",
      ]
    } else {
      sources += [
        "tizen_window_ecore_wl2.cc",
        "tizen_input_method_context.cc",
      ]
    }

    lib_dirs = [ "//engine/${target_cpu}" ]

    libs = [
      "base-utils-i18n",
      "capi-appfw-application",
      "capi-appfw-app-common",
      "capi-appfw-app-control",
      "capi-appfw-preference",
      "capi-base-common",
      "capi-system-info",
      "capi-system-system-settings",
      "dlog",
      "glib-2.0",
      "gio-2.0",
      "feedback",
      "flutter_engine",
      "tbm",
      "tdm-client",
      "tizen-extension-client",
      "vconf",
      "wayland-client",
      "EGL",
      "GLESv2",
    ]

    # tcore-specific or ecore-specific libraries
    if (use_tcore) {
      libs += [
        "tizen-core",
        "tizen-core-imf",
        "tizen-core-wl",
      ]
    } else {
      libs += [
        "ecore",
        "ecore_imf",
        "ecore_input",
        "ecore_wl2",
        "eina",
      ]
    }

    if (target_name == "flutter_tizen_common" ||
        target_name == "flutter_tizen_common_experimental") {
      sources += [ "channels/tizen_shell.cc" ]

      libs += [
        "tzsh_common",
        "tzsh_softkey",
      ]
    }

    defines += invoker.defines
    defines += [ "FLUTTER_ENGINE_NO_PROTOTYPES" ]

    # Add USE_TCORE_WL define when using tcore
    if (use_tcore) {
      defines += [ "USE_TCORE_WL" ]
    }

    if (target_name == "flutter_tizen_mobile_experimental" ||
        target_name == "flutter_tizen_tv_experimental" ||
        target_name == "flutter_tizen_common_experimental") {
      defines += [ "FLUTTER_TIZEN_EXPERIMENTAL" ]
      sources += [
        "external_texture_pixel_vulkan.cc",
        "external_texture_surface_vulkan.cc",
        "external_texture_surface_vulkan_buffer.cc",
        "external_texture_surface_vulkan_buffer_dma.cc",
        "tizen_renderer_vulkan.cc",
      ]
      deps += [ "//flutter/third_party/volk" ]
    }

    if (api_version != "6.0") {
      sources += [
        "flutter_tizen_nui.cc",
        "tizen_clipboard.cc",
        "tizen_renderer_nui_gl.cc",
        "tizen_view_nui.cc",
      ]

      libs += [
        "dali2-adaptor",
        "dali2-core",
      ]

      defines += [
        "NUI_SUPPORT",
        "CLIPBOARD_SUPPORT",
      ]
    }

    configs += [
      ":flutter_tizen_config",
      "//flutter/shell/platform/common:desktop_library_implementation",
    ]

    public_configs = [
      ":relative_client_wrapper_headers",
      "//flutter:config",
    ]

    deps += [
      ":dart_api_dl",
      "//flutter/shell/platform/common:common_cpp",
      "//flutter/shell/platform/common:common_cpp_accessibility",
      "//flutter/shell/platform/common:common_cpp_input",
      "//flutter/shell/platform/common:common_cpp_isolate_scope",
      "//flutter/shell/platform/common:common_cpp_library_headers",
      "//flutter/shell/platform/common/client_wrapper",
      "//flutter/shell/platform/embedder:embedder_headers",
      "//third_party/rapidjson",
    ]
  }
}

embedder("flutter_tizen_mobile") {
  target_type = "shared_library"

  defines = [ "MOBILE_PROFILE" ]
}

embedder("flutter_tizen_mobile_experimental") {
  target_type = "shared_library"

  defines = [ "MOBILE_PROFILE" ]
}

embedder("flutter_tizen_tv") {
  target_type = "shared_library"

  defines = [ "TV_PROFILE" ]
}

embedder("flutter_tizen_tv_experimental") {
  target_type = "shared_library"

  defines = [ "TV_PROFILE" ]
}

embedder("flutter_tizen_common") {
  target_type = "shared_library"

  defines = [ "COMMON_PROFILE" ]
}

embedder("flutter_tizen_common_experimental") {
  target_type = "shared_library"

  defines = [ "COMMON_PROFILE" ]
}

embedder("flutter_tizen_source") {
  target_type = "source_set"

  defines = [ "UNIT_TESTS" ]
}

executable("flutter_tizen_unittests") {
  testonly = true

  sources = [
    "channels/lifecycle_channel_unittests.cc",
    "channels/settings_channel_unittests.cc",
    "flutter_project_bundle_unittests.cc",
    "flutter_tizen_engine_unittest.cc",
    "flutter_tizen_texture_registrar_unittests.cc",
  ]

  ldflags = [ "-Wl,--unresolved-symbols=ignore-in-shared-libs" ]

  configs += [ ":flutter_tizen_config" ]

  deps += [
    ":flutter_tizen_source",
    "//flutter/shell/platform/common:common_cpp",
    "//flutter/shell/platform/common:common_cpp_accessibility",
    "//flutter/shell/platform/common/client_wrapper",
    "//third_party/googletest:gtest_main",
    "//third_party/rapidjson",
  ]
}

publish_client_wrapper_core("publish_cpp_client_wrapper") {
  visibility = [ ":*" ]
}

copy("publish_headers_tizen") {
  sources = _public_headers

  outputs = [ "$root_out_dir/public/{{source_file_part}}" ]
}

group("flutter_tizen") {
  deps = [
    ":flutter_tizen_common",
    ":flutter_tizen_common_experimental",
    ":flutter_tizen_mobile",
    ":flutter_tizen_mobile_experimental",
    ":flutter_tizen_tv",
    ":flutter_tizen_tv_experimental",
    ":publish_cpp_client_wrapper",
    ":publish_headers_tizen",
  ]
}
